EngineCore/include/EngineAPI.h

	/* ── opaque handle ─────────────────────────────────────────── */
	typedef void* EngineContextHandle;
	ENGINE_API void        Engine_GetWindowSize(EngineContextHandle ctx, int* outWidth, int* outHeight);
	/// Submit a custom rendering callback at the specified layer
	ENGINE_API void Render_SubmitCustom(
		EngineContextHandle ctx,
		void (*callback)(void* userData),  ///< Custom render function
		void* userData,                    ///< User data passed to callback
		int layer,                         ///< Render layer
		int order                          ///< Order within layer
	);
	//=============================================================================
	// IMGUI INTEGRATION API
	//=============================================================================

	ENGINE_API int ImGui_Initialize(EngineContextHandle ctx);
	ENGINE_API void ImGui_Shutdown(EngineContextHandle ctx);
	ENGINE_API int ImGui_ProcessEvent(EngineContextHandle ctx, void* sdlEvent);
	ENGINE_API void ImGui_NewFrame(EngineContextHandle ctx);
	ENGINE_API void ImGui_Render(EngineContextHandle ctx);
	ENGINE_API int ImGui_WantCaptureMouse(EngineContextHandle ctx);
	ENGINE_API int ImGui_WantCaptureKeyboard(EngineContextHandle ctx);
	ENGINE_API void ImGui_SetDisplaySize(EngineContextHandle ctx, float width, float height);
	ENGINE_API void ImGui_SetDockingEnabled(int enabled);
	ENGINE_API void* ImGui_GetFontAwesome();
	ENGINE_API void Engine_RunInContext(void (*fn)(void*), void* user);